Homepage: http://tabsrmm.sourceforge.net
SF.NET Project Page: http://www.sourceforge.net/projects/tabsrmm/
Support: http://www.miranda.or.at/forums/

                               --------------------
						
				    Version History:
				    ================
+ : new feature
* : changed
! : bufgix						
- : feature removed or disabled because of pending bugs

Version 0.9.9.96 - 2005/06/28

        ! null pointer check when retrieving status message
        
        ! fixed window icon problem (autoswitch related)
        
        * added range checks for the panel splitter (don't save/load "invalid" values)

        ! fixed icon on the "visibility indicator" in the info panel (only, when
          using the manual quick toggle mode).
          
        ! fixed "sticky" unread icon (didn't always go away when container got the focus.
        
        * visibility indicator now uses global icons instead of protocol specific icons.
          These icons can be configured using IcoLib.
          
        ! corrected some typos
        
        ! minor info panel fixes (toolbar menu)
        
        * allow close tab within error state (visible error controls), Unsent messages which
          returned an error are canceled. Messages "in progress" may still be sent, but the
          ACK will then go to nowhere after the msg window has been closed.
        
        * version bump (0.9.9.96)
        
        * added %x variable for the titlebar to show the extended status mode description.
          The following variables are now available:
          %n - Nickname
          %s - Status mode description
          %c - container name
          %u - UIN
          %p - protocol
          %x - extended status mode description (icq only)
        
        + added ability to use underlined fonts in the message window when configured with
          the font service plugin.
          
Version 0.9.9.95 - 2005/06/28
